--- a/index.html
+++ b/index.html
@@ -46,7 +46,7 @@
                 <div class="paragraphe">
                     <h4></h4>
                     <p id="profiltexte1">Passionné de sport, j'ai beaucoup pratiqué les sports collectifs comme le <span class="rouge">basket</span> et le <span class="rouge">volley</span>.<br>
-                        Originaire d'annecy, j'apprécie grandement le <span class="rouge">ski</span> et autres activités sportives au sein des montagnes alentours.
+                        Originaire d'Annecy, j'apprécie grandement le <span class="rouge">ski</span> et autres activités sportives au sein des montagnes environnantes.
                         <br><br>L'informatique m'a toujours attiré. Je suis actuellement en études supérieures à <span class="bleu">l'IUT d'Annecy</span> où je travaille pour obtenir mon BUT Informatique.
                         <br><br>J'ai décidé de créer ce portfolio en ligne pour appuyer ma <a href="https://www.linkedin.com/feed/update/urn:li:activity:7002640237919092736/" class="miseenevidence" target="_blank">recherche de stage de 2ème année</a>.
                     </p>
@@ -201,3 +201,4 @@
     <script src="main.js"></script>
 </body>
 </html>
+
