--- a/index.html
+++ b/index.html
@@ -176,7 +176,7 @@
     </main>
 
     <!-- FOOTER -->
-    <footer class="footer section">
+    <footer class="footer">
         <div class="footer__container bd-grid">
             <div class="footer__data">
                 <h2 class="footer__title">Timoté POLICET</h2>
@@ -184,7 +184,7 @@
             </div>
 
             <div class="footer__data">
-                <h2 class="footer__title">Timoté POLICET</h2>
+                <h2 class="footer__title">Navigation</h2>
                 <ul>
                     <li><a href="#home" class="footer__link">Home</a></li>
                     <li><a href="#about" class="footer__link">A propos</a></li>
