--- a/index.html
+++ b/index.html
@@ -28,7 +28,7 @@
             </div>
             
             <div class="nav__toggle" id="nav-toggle">
-                <box-icon name='menu'></box-icon>
+                <svg xmlns="http://www.w3.org/2000/svg" width="24" height="24" viewBox="0 0 24 24" style="fill: rgba(255, 255, 255, 1);transform: rotate(180deg); msFilter:progid:DXImageTransform.Microsoft.BasicImage(rotation=2);"><path d="M4 6h16v2H4zm0 5h16v2H4zm0 5h16v2H4z"></path></svg>
             </div>
         </nav>
     </header>
@@ -156,20 +156,20 @@
                     <h3 class="contact__subtitle">TELEPHONE</h3>
                     <span class="contact__text">+33 6 52 62 50 43</span>
 
-                    <h3 class="contact__subtitle">ADRESSE</h3>
-                    <span class="contact__text">Annecy</span>
+                    <h3 class="contact__subtitle">LINKEDIN</h3>
+                    <span class="contact__text">Timoté POLICET</span>
                 </div>
 
-                <form action="" class="contact__form">
-                    <div class="contact_inputs">
-                        <input type="text" placeholder="Name" class="contact__input">
-                        <input type="mail" placeholder="Email" class="contact__input">
-                    </div>
+                <div class="contact__info">
+                    <h3 class="contact__subtitle">UNIVERSITÉ</h3>
+                    <span class="contact__text">I.U.T Institut universitaire de technologie</span>
 
-                    <textarea name="" id="" cols="0" rows="10" class="contact__input"></textarea>
+                    <h3 class="contact__subtitle">FORMATION</h3>
+                    <span class="contact__text">BUT Informatique</span>
 
-                    <input type="submit" value="Envoyer" class="contact__button">
-                </form>
+                    <h3 class="contact__subtitle">ADRESSE</h3>
+                    <span class="contact__text">9 Rue de l'Arc en Ciel, Annecy</span>
+                </div>
             </div>
         </section>
 
