--- a/index.html
+++ b/index.html
@@ -58,7 +58,7 @@
 
             <div class="about__container bd-grid">
                 <div class="about__img">
-                    <img src="/assets/tom.jpg" alt="">
+                    <img src="assets/tom.jpg" alt="">
                 </div>
 
                 <div>
@@ -105,7 +105,7 @@
                 </div>
 
                 <div class="skills__img">
-                    <img src="/assets/blob.svg" alt="">
+                    <img src="./assets/blob.svg" alt="">
                     <img src="/assets/blob2.svg" id="blob2" alt="">
                 </div>
                 
