--- a/index.html
+++ b/index.html
@@ -58,7 +58,7 @@
 
             <div class="about__container bd-grid">
                 <div class="about__img">
-                    <img src="./assets/tom.jpg" alt="">
+                    <img src="/assets/tom.jpg" alt="">
                 </div>
 
                 <div>
@@ -105,8 +105,8 @@
                 </div>
 
                 <div class="skills__img">
-                    <img src="./assets/blob.svg" alt="">
-                    <img src="./assets/blob2.svg" id="blob2" alt="">
+                    <img id="blob"src="/assets/blob.svg" alt="">
+                    
                 </div>
                 
             </div>
@@ -118,25 +118,25 @@
 
             <div class="portfolio__container bd-grid">
                 <div class="portfolio__img">
-                    <img src="./assets/unity.jpg" alt="">
+                    <img src="/assets/unity.jpg" alt="">
                     <div class="portfolio__link">
                         <a href="#" class="portfolio__link-name">Jeu vidéo avec Unity</a>
                     </div>
                 </div>
                 <div class="portfolio__img">
-                    <img src="./assets/abeille.png" alt="">
+                    <img src="/assets/abeille.png" alt="">
                     <div class="portfolio__link">
                         <a href="#" class="portfolio__link-name">Design informatique<br></a>
                     </div>
                 </div>
                 <div class="portfolio__img">
-                    <img src="./assets/monogame.png" alt="">
+                    <img src="/assets/monogame.png" alt="">
                     <div class="portfolio__link">
                         <a href="#" class="portfolio__link-name">Jeu vidéo avec<br>librairie C# monogame</a>
                     </div>
                 </div>
                 <div class="portfolio__img">
-                    <img src="./assets/Tesla.png" alt="">
+                    <img src="/assets/Tesla.png" alt="">
                     <div class="portfolio__link">
                         <a href="#" class="portfolio__link-name">Site web d'achat de voiture<br>Inspiré de Tesla</a>
                     </div>
