--- a/index.html
+++ b/index.html
@@ -67,9 +67,9 @@
                     <p class="about__text">Passionné de sport et originaire d'Annecy, j'apprécie grandement le ski et autres activités sportives au sein des montagnes environnantes ainsi que les sports collectifs comme le basket et le volley.<br>L'informatique m'a toujours attiré. Je suis actuellement en études supérieures en BUT Informatique.<br>J'ai créé ce site web dans le cadre de ma <a href="https://www.linkedin.com/feed/update/urn:li:activity:7002640237919092736/" class="underline" target="_blank">recherche de stage de deuxième année.</a></p>
 
                     <div class="about__social">
-                        <a href="https://www.linkedin.com/in/timot%C3%A9-policet-b98568227/" target="_blank" class="about__social-icon"><box-icon name='linkedin' type='logo' ></box-icon></a>
-                        <a href="https://github.com/TyrmaarDev" target="_blank" class="about__social-icon"><box-icon name='github' type='logo' ></box-icon></a>
-                        <a href="https://www.instagram.com/tim.plct/" target="_blank" class="about__social-icon"><box-icon name='instagram' type='logo' ></box-icon></a>
+                        <a href="https://www.linkedin.com/in/timot%C3%A9-policet-b98568227/" target="_blank" class="about__social-icon"><box-icon color=#FFF name='linkedin' type='logo' ></box-icon></a>
+                        <a href="https://github.com/TyrmaarDev" target="_blank" class="about__social-icon"><box-icon color=#FFF name='github' type='logo' ></box-icon></a>
+                        <a href="https://www.instagram.com/tim.plct/" target="_blank" class="about__social-icon"><box-icon color=#FFF name='instagram' type='logo' ></box-icon></a>
                         
                     </div>
                 </div>
