--- a/index.html
+++ b/index.html
@@ -64,12 +64,12 @@
                 <div>
                     <h2 class="about__subtitle">Je m'appelle timoté</h2>
                     <span class="about__profession">Étudiant en informatique à l'IUT d'Annecy</span>
-                    <p class="about__text">Passionné de sport et originaire d'Annecy, j'apprécie grandement le ski et autres activités sportives au sein des montagnes environnantes ainsi que les sports collectifs comme le basket et le volley.<br>L'informatique m'a toujours attiré. Je suis actuellement en études supérieures en BUT Informatique.<br>J'ai créé ce site web dans le cadre de ma <a href="https://www.linkedin.com/feed/update/urn:li:activity:7002640237919092736/" class="underline" target="_blank">recherche de stage de deuxième année.</a></p>
+                    <p class="about__text">Passionné de sport et originaire d'Annecy, j'apprécie grandement le ski et autres activités sportives au sein des montagnes environnantes ainsi que les sports collectifs comme le <span class="bold">basket</span> et le <span class="bold">volley</span>.<br>L'informatique m'a toujours attiré. Je suis actuellement en études supérieures en <span class="bold">BUT informatique</span>.<br>J'ai créé ce site web dans le cadre de ma <a href="https://www.linkedin.com/feed/update/urn:li:activity:7002640237919092736/" class="underline" target="_blank">recherche de stage de deuxième année.</a></p>
 
                     <div class="about__social">
                         <a href="https://www.linkedin.com/in/timot%C3%A9-policet-b98568227/" target="_blank" class="about__social-icon"><box-icon color=#FFF name='linkedin' type='logo' ></box-icon></a>
-                        <a href="https://github.com/TyrmaarDev" target="_blank" class="about__social-icon"><box-icon color=#FFF name='github' type='logo' ></box-icon></a>
-                        <a href="https://www.instagram.com/tim.plct/" target="_blank" class="about__social-icon"><box-icon color=#FFF name='instagram' type='logo' ></box-icon></a>
+                        <a href="https://github.com/TyrmaarDev" target="_blank" class="about__social-icon"><box-icon name='github' type='logo' color=#FFF ></box-icon></a>
+                        <a href="https://www.instagram.com/tim.plct/" target="_blank" class="about__social-icon"><box-icon name='instagram' type='logo' color=#FFF ></box-icon></a>
                         
                     </div>
                 </div>
@@ -80,15 +80,16 @@
         <section class="skills section" id="skills">
             <h2 class="section-title">Compétences</h2>
 
+            
             <div class="skills__container bd-grid">
                 <div class="skills__box">
                     <h3 class="skills__subtitle">Développement</h3>
-                    <span class="skills__name">Html</span>
-                    <span class="skills__name">Css</span>
+                    <span class="skills__name">HTML</span>
+                    <span class="skills__name">CSS</span>
                     <span class="skills__name">Javascript</span>
-                    <span class="skills__name">Php</span>
+                    <span class="skills__name">PHP</span>
                     <span class="skills__name">C#</span>
-                    <span class="skills__name">Sql</span>
+                    <span class="skills__name">SQL</span>
 
                     <h3 class="skills__subtitle">Design</h3>
                     <span class="skills__name">Canva</span>
