--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
     
     <script src="https://unpkg.com/boxicons@2.1.4/dist/boxicons.js"></script>
     <link rel="stylesheet" href="style.css">
-    <title>Document</title>
+    <title>Timoté POLICET</title>
 </head>
 <body>
     <!-- HEADER -->
