--- a/index.html
+++ b/index.html
@@ -177,7 +177,7 @@
                     <span class="contact__text">BUT Informatique</span>
 
                     <h3 class="contact__subtitle">ADRESSE</h3>
-                    <span class="contact__text">9 Rue de l'Arc en Ciel, Annecy</span>
+                    <span class="contact__text">543 bis route de promery, Pringy</span>
                 </div>
             </div>
         </section>
